# manipulator_experiments

./: .gitignore  Dockerfile  README.md  bashrc  zshrc
detection_pkg/: CMakeLists.txt
detection_pkg/config/: tags.yaml
detection_pkg/launch/: apriltag_test.launch
fanuc_custom_moveit_config/: .setup_assistant  CMakeLists.txt
fanuc_custom_moveit_config/config/: fake_controllers.yaml  fanuc_lrmate200id7l.srdf  gazebo_fanuc_lrmate200id7l.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
fanuc_custom_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
fanuc_custom_pkg/: CMakeLists.txt
fanuc_custom_pkg/launch/: fanuc_client.launch  fanuc_server.launch  load_lrmate200id7l.launch  test.launch
fanuc_custom_pkg/scripts/: node_set_prefined_pose.py
fanuc_custom_pkg/urdf/: lrmate200id7l.urdf  lrmate200id7l.xacro  lrmate200id7l_macro.xacro
folder1/: readMe.md
planning_system/: CMakeLists.txt
planning_system/scripts/: gripper_test.py
pneumatic_gripper_control/: CMakeLists.txt
scripts/: build.sh  install_third_party.sh
(+5 files in other folders)
